feat(transfers): expose atomic creation api (#45)
